<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/babypink"
>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/heading"
            android:textStyle="bold"
            android:textSize="32sp"
            android:text="@string/main_heading"
            android:textColor="@color/heading"

            android:layout_marginTop="20dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintHorizontal_bias="0.5"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:id="@+id/selectionTV"

            android:textColor="@color/info"
            android:text="@string/selection"
            android:textStyle="bold"
            android:textSize="24sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            app:layout_constraintHorizontal_bias="0.5"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:id="@+id/feedbackTV"

            android:textColor="@color/feedback"
            android:text= "@string/Feedback"
            android:textStyle="bold"
            android:textSize="20sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectionTV"
            app:layout_constraintHorizontal_bias="0.5"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"

            android:id="@+id/fragMovieBtn"
            android:text="@string/movie_frag"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedbackTV"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"

            android:id="@+id/fragMusicBtn"
            android:text="@string/music_frag"

            app:layout_constraintTop_toBottomOf="@+id/feedbackTV"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="400dp"
            android:layout_marginVertical="20dp"
            android:id="@+id/frameHolderMain"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragMusicBtn">

    </androidx.fragment.app.FragmentContainerView>

</androidx.constraintlayout.widget.ConstraintLayout>
